tests/baselines/reference/objectLiteralShorthandPropertiesWithModule(strict=true).errors.txt
objectLiteralShorthandPropertiesWithModule.ts(4,16): error TS7005: Variable 'x' implicitly has an 'any' type.


==== objectLiteralShorthandPropertiesWithModule.ts (1 errors) ====
    // module export
    
    module m {
        export var x;
                   ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
    }
    
    module m {
        var z = x;
        var y = {
            a: x,
            x
        };
    }
    